force-app/main/default/objects/C360_OpportunityCompetitor__c.object
<CustomObject>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>C360_Competitor__c</referenceTo>
        <relationshipLabel>Opportunity Competitor</relationshipLabel>
        <relationshipName>Opportunity_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>C360_Opportunity__c</referenceTo>
        <relationshipLabel>Opportunity Competitor</relationshipLabel>
        <relationshipName>Opportunity_Competitor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_Product__c.DeletionMark__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Opportunity Competitor</relationshipLabel>
        <relationshipName>Opportunity_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposedAmount__c</fullName>
        <label>Proposed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProposedVolume__c</fullName>
        <label>Proposed Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_UnitConversion__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_UnitConversion__c</referenceTo>
        <relationshipLabel>Opportunity Competitor</relationshipLabel>
        <relationshipName>Opportunity_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OC{0000000}</displayFormat>
        <label>Competitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>